[package]
name = "discfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
fuser = "0.14.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
libc = "0.2.150"
env_logger = "0.10.1"
log = "0.4.20"
