[package]
name = "discfs"
version = "0.1.1"
description = "Virtual FUSE filesystem with files stored as Discord attachments"
homepage = "https://crates.io/crates/discfs"
documentation = "https://docs.rs/discfs"
repository = "https://github.com/sqooid/discfs"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "readme.md"

exclude = [".vscode/", "arch/", ".env*", "flake.*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
fuser = "0.14.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
libc = "0.2.150"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.10", features = ["derive", "env"] }
dotenv-vault = "0.1.1"
async-trait = "0.1.74"
